--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ chrono = { version = "0.4", features = ["serde"] }
 url = "2.5"
 base64 = "0.22"
 mailparse = "0.15"
+dirs = "5.0"
 
 [dev-dependencies]
 mockito = "1.5"
