--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,8 @@ url = "2.5"
 base64 = "0.22"
 mailparse = "0.15"
 dirs = "5.0"
+dotenvy = "0.15"
+futures = "0.3.31"
 
 [dev-dependencies]
 mockito = "1.5"
